<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutProgramActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/firstCard"
        style="@style/CardYellow">

        <ImageView
            android:id="@+id/imageViewBook"
            android:layout_gravity="center_horizontal"
            android:layout_width="61dp"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/baseline_book_green_500_24dp" />

        <TextView
            android:id="@+id/textViewBookMaster"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/Master"
            android:textSize="32dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewApp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:text="@string/App"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/Ver"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Autor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="210dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="26dp"
            android:paddingBottom="4dp"
            android:text="@string/AutorName"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>
</RelativeLayout>