<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:srcCompat="@drawable/baseline_book_green_500_24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:paddingTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTytul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_title"/>
        <TextView
            android:id="@+id/textViewAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_author"/>
        <TextView
            android:id="@+id/textViewData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_date"/>

    </LinearLayout>

</LinearLayout>
