<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/witaj"
        android:textSize="28sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/firstCard"
        android:layout_below="@+id/textView"
        style="@style/CardYellow">

        <ImageView
            android:id="@+id/imageView_library"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:paddingStart="5dp"
            app:srcCompat="@drawable/baseline_library_books_green_500_24dp"
            android:layout_gravity="start" />

        <TextView
            android:id="@+id/textView_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="start|center"
            android:paddingStart="40dp"
            android:layout_marginEnd="16dp"
            android:text="@string/czytaj"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/firstCard"
        android:id="@+id/secondCard"
        style="@style/CardYellow">

        <ImageView
            android:id="@+id/imageView_message"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:paddingStart="5dp"
            android:layout_gravity="start"
            app:srcCompat="@drawable/baseline_message_green_500_24dp" />

        <TextView
            android:id="@+id/textView_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:paddingStart="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/komentarz"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_below="@+id/secondCard"
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/buttonOK" />

</RelativeLayout>